examples/app/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
      name: app1
spec:
  selector:
    matchLabels:
      name: app1 
  replicas: 1
  template:
    metadata:
      labels:
        name: app1
        # abc: def
    spec:
      containers:
      - name: app3
        # image: in-docker-reg.eng.citrite.net/cpx-dev/web-test:latest
#        image: httpd:2.4
#        image: docker.io/kumhn/sample-app:eastdc 
        image: docker.io/kumhn/sample-os4-image:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: app1
          containerPort: 80 
        resources:
          requests:
            cpu: 100m
            memory: 100Mi

---
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: app1
---
